// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ButtonGroup ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary css-1gzgjzv-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorPrimary css-ohm91s-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorPrimary css-mjobhc-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorPrimary css-mjobhc-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-disableElevation MuiButtonGroup-colorPrimary css-ohm91s-MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary css-zv9ro0-MuiButtonGroup-root"
    role="group"
  />
</div>
`;
